PSVAMB-19043 Plugin functionality (port from V2)

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,9 @@
         provider: {},
         targetId: "player",
         plugins: {
-            blinkingWatermark: {}
+            blinkingWatermark: {
+                showEvery: 5
+            }
         }
     };
     var player = KalturaPlayer.setup(config);
